--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "def find_term_derivative(term):\n",
     "    derivative = ()\n",
-    "    derivative[0] = "
+    "    derivative[0] = term"
    ]
   },
   {
