--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,8 @@
    "source": [
     "def find_term_derivative(term):\n",
     "    derivative = ()\n",
-    "    derivative[0] = term[0]*term"
+    "    derivative[0] = term[0]*term[1]\n",
+    "    derivat"
    ]
   },
   {
