--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "def find_term_derivative(term):\n",
     "    derivative = ()\n",
     "    derivative[0] = term[0]*term[1]\n",
-    "    derivat"
+    "    derivative[1] = term[1]"
    ]
   },
   {
