Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "def find_term_derivative(term):\n",
     "    derivative = ()\n",
-    "    \n",
+    "    base\n",
     "    derivative[0] = term[0]*term[1]\n",
     "    derivative[1] = term[1]-1\n",
     "    return derivative"
