Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,8 +83,8 @@
     "def find_term_derivative(term):\n",
     "    derivative = ()\n",
     "    base = term[0]\n",
-    "    \n",
-    "    derivative[0] = term[0]*term[1]\n",
+    "    exp = term[1]\n",
+    "    derivative[0] = term[0*term[1]\n",
     "    derivative[1] = term[1]-1\n",
     "    return derivative"
    ]
