Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,8 +84,8 @@
     "    derivative = ()\n",
     "    base = term[0]\n",
     "    exp = term[1]\n",
-    "    derivative[0] = term[0*term[1]\n",
-    "    derivative[1] = term[1]-1\n",
+    "    derivative[0] = base*exp\n",
+    "    derivative[1] = term-1\n",
     "    return derivative"
    ]
   },
