Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    derivative = ()\n",
+    "    derivative = []\n",
     "    base = term[0]\n",
     "    exp = term[1]\n",
     "    derivative[0] = base*exp\n",
