--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "def find_term_derivative(term):\n",
     "    derivative = []\n",
-    "    derivative[0] = term[0]*term\n",
+    "    derivative.append() term[0]*term[1]\n",
     "    derivative[1] = exp-1\n",
     "    return derivative"
    ]
