--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "def find_term_derivative(term):\n",
     "    derivative = []\n",
     "    derivative.append(term[0]*term[1]) \n",
-    "    derivative[1] = exp-1\n",
+    "    derivative.append(term)\n",
     "    return derivative"
    ]
   },
