Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     "    derivative = []\n",
     "    derivative.append(term[0]*term[1]) \n",
     "    derivative.append(term[1]-1)\n",
-    "    return derivative"
+    "    returntup derivative"
    ]
   },
   {
