--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
    "source": [
     "def find_derivative(function_terms):\n",
     "    d_list = []\n",
-    "    "
+    "    for term in function_terms:\n",
+    "        "
    ]
   },
   {
