--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     "def find_derivative(function_terms):\n",
     "    d_list = []\n",
     "    for term in function_terms:\n",
-    "        d"
+    "        d_list.append()"
    ]
   },
   {
