--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     "    d_list = []\n",
     "    for term in function_terms:\n",
     "        d_list.append(find_term_derivative(term))\n",
-    "        \n",
+    "        filter(lambda: ter)\n",
     "    return d_list"
    ]
   },
