Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,8 +157,8 @@
     "def find_derivative(function_terms):\n",
     "    d_list = []\n",
     "    for term in function_terms:\n",
+    "        filt\n",
     "        d_list.append(find_term_derivative(term))\n",
-    "      \n",
     "    return d_list"
    ]
   },
