--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "def find_derivative(function_terms):\n",
     "    d_list = []\n",
-    "    filter\n",
+    "    filter(lambda f_term: )\n",
     "    for term in function_terms:\n",
     "        d_list.append(find_term_derivative(term))\n",
     "    return d_list"
