Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,8 +158,8 @@
     "    d_list = []\n",
     "    for term in function_terms:\n",
     "        d_list.append(find_term_derivative(term))\n",
-    "    no_zero \n",
-    "    return d_list"
+    "    no_zero = list(filter)\n",
+    "    return no_zero"
    ]
   },
   {
