--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,22 +158,22 @@
     "    d_list = []\n",
     "    for term in function_terms:\n",
     "        d_list.append(find_term_derivative(term))\n",
-    "    no_zero = list(filter(lambda x: x[0] < 0, d_list))\n",
+    "    no_zero = list(filter(lambda x: x[0] <= 0, d_list))\n",
     "    return no_zero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(12, 2), (-3, 0)]"
+       "[(-3, 0)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(6, 1)]"
+       "[(0, -1)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
