Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,22 +158,22 @@
     "    d_list = []\n",
     "    for term in function_terms:\n",
     "        d_list.append(find_term_derivative(term))\n",
-    "    no_zero = list(filter(lambda x: x[0] <= 0, d_list))\n",
+    "    no_zero = list(filter(lambda x: x[0] > 0, d_list))\n",
     "    return no_zero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(-3, 0)]"
+       "[(12, 2)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
