Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     "    d_list = []\n",
     "    for term in function_terms:\n",
     "        d_list.append(find_term_derivative(term))\n",
-    "    no_zero = list(filter(lambda x: x[0] > 0, d_list))\n",
+    "    no_zero = list(filter(lambda x: x[0] != 0, d_list))\n",
     "    return no_zero"
    ]
   },
