--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    derivatives = find_derivative"
+    "    derivatives = find_derivative(terms)\n",
+    "    "
    ]
   },
   {
