--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
     "\n",
     "def derivative_at(terms, x):\n",
     "    derivatives = find_derivative(terms)\n",
-    "    output_at(derivatives)"
+    "    output_at(derivatives, x)"
    ]
   },
   {
