--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,7 +1372,8 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    der"
+    "    der = find_derivative(terms)\n",
+    "    "
    ]
   },
   {
