--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,7 +1373,8 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    der = find_derivative(terms)\n",
-    "    function_values = list(map(lambda x: output(at(der,x))))"
+    "    function_values = list(map(lambda x: output(at(der,x), x_values)))\n",
+    "    return "
    ]
   },
   {
