--- a/index.ipynb
+++ b/index.ipynb
@@ -1374,7 +1374,7 @@
     "def derivative_function_trace(terms, x_values):\n",
     "    der = find_derivative(terms)\n",
     "    function_values = list(map(lambda x: output(at(der,x), x_values)))\n",
-    "    return trace_values(x_values, )"
+    "    return trace_values(x_values, function_values, mode = 'line')"
    ]
   },
   {
