Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,7 +1373,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    der = find_derivative(terms)\n",
-    "    function_values = list(map(lambda x: output(at(der,x), x_values)))\n",
+    "    function_values = list(map(lambda x: output_at(der,x), x_values))\n",
     "    return trace_values(x_values, function_values, mode = 'line')"
    ]
   },
