--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,7 +1373,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    der = find_derivative(terms)\n",
-    "    function_values = list(map(lambda x: output_at(der,x), x_values))"
+    "    return function_values_trace = list(map(lambda x: output_at(der,x), x_values))"
    ]
   },
   {
